--- a/Pages/Shared/_NavPartial.cshtml
+++ b/Pages/Shared/_NavPartial.cshtml
@@ -1,4 +1,4 @@
-@inject SignInManager<IdentityUser> SignInManager
+@inject SignInManager<RemindMeal.Models.User> SignInManager
 
 <ul class="navbar-nav flex-grow-1">
 @if (SignInManager.IsSignedIn(User)) {
