--- a/Pages/Recipes/Details.cshtml
+++ b/Pages/Recipes/Details.cshtml
@@ -11,6 +11,12 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Recipe.Type)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Recipe.Type)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Recipe.Description)
         </dt>
         <dd class="col-sm-10">
