--- a/Pages/Recipes/Index.cshtml
+++ b/Pages/Recipes/Index.cshtml
@@ -17,6 +17,9 @@
                 @Html.DisplayNameFor(model => model.Recipe[0].Name)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Recipe[0].Type)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Recipe[0].Description)
             </th>
             <th>
@@ -30,6 +33,9 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Type)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Description)
