--- a/Pages/Recipes/Delete.cshtml
+++ b/Pages/Recipes/Delete.cshtml
@@ -34,7 +34,7 @@
     
     <form method="post">
         <input type="hidden" asp-for="Recipe.Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
+        <input type="submit" value="Supprimer" class="btn btn-danger" /> |
+        <a asp-page="./Index">Retour à la liste</a>
     </form>
 </div>
