--- a/Pages/Shared/_LoginPartial.cshtml
+++ b/Pages/Shared/_LoginPartial.cshtml
@@ -8,18 +8,23 @@
         <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Bonjour @User.Identity.Name!</a>
     </li>
     <li class="nav-item">
-        <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post" >
-            <button  type="submit" class="nav-link btn btn-link text-dark">Déconnexion</button>
-        </form>
+        <form
+            class="form-inline"
+            asp-area="Identity"
+            asp-page="/Account/Logout"
+            asp-route-returnUrl="@Url.Page("/", new { area = "" })"
+            method="post" >
+            <button type="submit" class="nav-link btn btn-link text-dark">Déconnexion</button>
+            </form>
     </li>
 }
 else
 {
     <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Créer un compte</a>
+        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Se connecter</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Se connecter</a>
+        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Créer un compte</a>
     </li>
 }
 </ul>
