Translates Index page

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -5,6 +5,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Bienvenue sur RemindMeal !</h1>
+    <p>Cette application web a été développée avec le Framework Asp.Net Core. <a href="https://docs.microsoft.com/aspnet/core">Cliquez ici</a> pour en savoir plus.</p>
 </div>
