--- a/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model PersonalDataModel
 @{
-    ViewData["Title"] = "Personal Data";
+    ViewData["Title"] = "Données personnelles";
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
 }
 
@@ -9,16 +9,23 @@
 
 <div class="row">
     <div class="col-md-6">
-        <p>Your account contains personal data that you have given us. This page allows you to download or delete that data.</p>
         <p>
-            <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
+            Votre compte contient des données personnelles que vous nous avez fournies. Sur cette page, vous pouvez
+            téléchargez ou supprimez ces données.
         </p>
-        <form id="download-data" asp-page="DownloadPersonalData" method="post" class="form-group">
-            <button class="btn btn-primary" type="submit">Download</button>
-        </form>
         <p>
-            <a id="delete" asp-page="DeletePersonalData" class="btn btn-primary">Delete</a>
+            <strong>
+                La suppression de ces données est irréversible et engendrera la fermeture définitive de votre compte.
+            </strong>
         </p>
+        <div class="row">
+            <form id="download-data" asp-page="DownloadPersonalData" method="post" class="form-group mr-1">
+                <button class="btn btn-primary" type="submit"><span class="octicon octicon-mark-github"></span>Télécharger</button>
+            </form>
+            <p class="form-group">
+                <a id="delete" asp-page="DeletePersonalData" class="btn btn-danger">Supprimer</a>
+            </p>
+        </div>
     </div>
 </div>
 
