--- a/Pages/Recipes/Delete.cshtml
+++ b/Pages/Recipes/Delete.cshtml
@@ -5,12 +5,10 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Suppression de recette</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Êtes-vous sûr(e) de vouloir supprimer cette recette ?</h3>
 <div>
-    <h4>Recipe</h4>
-    <hr />
     <dl class="row">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Recipe.Name)
