--- a/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model ChangePasswordModel
 @{
-    ViewData["Title"] = "Change password";
+    ViewData["Title"] = "Changement du mot de passe";
     ViewData["ActivePage"] = ManageNavPages.ChangePassword;
 }
 
