--- a/Pages/Meals/Edit.cshtml
+++ b/Pages/Meals/Edit.cshtml
@@ -12,7 +12,7 @@
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="MealId" />
+            <input type="hidden" asp-for="MealMV.Id" />
             <div class="form-group">
                 <label asp-for="MealMV.Date" class="control-label"></label>
                 <input asp-for="MealMV.Date" class="form-control" />
