--- a/Pages/Meals/Edit.cshtml
+++ b/Pages/Meals/Edit.cshtml
@@ -19,19 +19,19 @@
                 <span asp-validation-for="MealMV.Date" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SelectedFriends" class="control-label">Invités</label>
+                <label asp-for="MealMV.SelectedFriendIds" class="control-label">Invités</label>
                 <select
-                    asp-for="SelectedFriends"
-                    asp-items="Model.AvailableFriends"
+                    asp-for="MealMV.SelectedFriendIds"
+                    asp-items="Model.MealMV.AvailableFriends"
                     class="form-control selectpicker"
                     data-live-search="true">
                 </select>
             </div>
             <div class="form-group">
-                <label asp-for="SelectedRecipes" class="control-label">Menu</label>
+                <label asp-for="MealMV.SelectedRecipeIds" class="control-label">Menu</label>
                 <select
-                    asp-for="SelectedRecipes"
-                    asp-items="Model.AvailableRecipes"
+                    asp-for="MealMV.SelectedRecipeIds"
+                    asp-items="Model.MealMV.AvailableRecipes"
                     class="form-control selectpicker"
                     data-live-search="true">
                 </select>
