--- a/src/Pages/Meals/Index.cshtml
+++ b/src/Pages/Meals/Index.cshtml
@@ -34,9 +34,11 @@
                 @string.Join(",", item.Cookings.Select(c => c.Recipe.Name))
             </td>
             <td>
-                <a asp-page="./Details" asp-route-id="@item.Id" class="btn btn-primary">Détails</a>
-                <a asp-page="./Edit"    asp-route-id="@item.Id" class="btn btn-success">Modifier</a>
-                <a asp-page="./Delete"  asp-route-id="@item.Id" class="btn btn-danger">Supprimer</a>
+                <div class="btn-group" role="group">
+                    <a asp-page="./Details" asp-route-id="@item.Id" class="btn btn-primary">Détails</a>
+                    <a asp-page="./Edit" asp-route-id="@item.Id" class="btn btn-success">Modifier</a>
+                    <a asp-page="./Delete" asp-route-id="@item.Id" class="btn btn-danger">Supprimer</a>
+                </div>
             </td>
         </tr>
 }
