--- a/src/Pages/Recipes/Index.cshtml
+++ b/src/Pages/Recipes/Index.cshtml
@@ -38,9 +38,11 @@
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td>
-                <a asp-page="./Details" asp-route-id="@item.Id" class="btn btn-primary">Détails</a>
-                <a asp-page="./Edit"    asp-route-id="@item.Id" class="btn btn-success">Modifier</a>
-                <a asp-page="./Delete"  asp-route-id="@item.Id" class="btn btn-danger">Supprimer</a>
+                <div class="btn-group" role="group">
+                    <a asp-page="./Details" asp-route-id="@item.Id" class="btn btn-primary">Détails</a>
+                    <a asp-page="./Edit"    asp-route-id="@item.Id" class="btn btn-success">Modifier</a>
+                    <a asp-page="./Delete"  asp-route-id="@item.Id" class="btn btn-danger">Supprimer</a>
+                </div>
             </td>
         </tr>
 }
