--- a/src/Pages/Recipes/Create.cshtml
+++ b/src/Pages/Recipes/Create.cshtml
@@ -2,6 +2,10 @@
 @model RemindMeal.Pages.Recipes.CreateModel
 @using RemindMeal.Models
 
+@{
+    ViewData["title"] = "Nouvelle recette";
+}
+
 <h4>Enregistrer une nouvelle recette</h4>
 <hr />
 <div class="row">
@@ -9,21 +13,31 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Recipe.Name" class="control-label"></label>
-                <input asp-for="Recipe.Name" class="form-control" />
-                <span asp-validation-for="Recipe.Name" class="text-danger"></span>
+                <label asp-for="RecipeModelView.Name" class="control-label"></label>
+                <input asp-for="RecipeModelView.Name" class="form-control" />
+                <span asp-validation-for="RecipeModelView.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Recipe.Description" class="control-label"></label>
-                <textarea asp-for="Recipe.Description" class="form-control"></textarea>
-                <span asp-validation-for="Recipe.Description" class="text-danger"></span>
+                <label asp-for="RecipeModelView.Description" class="control-label"></label>
+                <textarea asp-for="RecipeModelView.Description" class="form-control"></textarea>
+                <span asp-validation-for="RecipeModelView.Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Recipe.Type" class="control-label"></label>
-                <select asp-for="Recipe.Type" asp-items="Html.GetEnumSelectList<RecipeType>()"
+                <label asp-for="RecipeModelView.Type" class="control-label"></label>
+                <select asp-for="RecipeModelView.Type" asp-items="Html.GetEnumSelectList<RecipeType>()"
                     class="form-control selectpicker"></select>
-                <span asp-validation-for="Recipe.Type" class="text-danger"></span>
+                <span asp-validation-for="RecipeModelView.Type" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="RecipeModelView.SelectedTagIds" class="control-label">Tags</label>
+                <select
+                    asp-for="RecipeModelView.SelectedTagIds"
+                    asp-items="Model.RecipeModelView.AvailableTags"
+                    class="form-control selectpicker"
+                    data-live-search="true">
+                </select>
+            </div>
+
             <div class="form-group">
                 <input type="submit" value="Créer" class="btn btn-primary" />
             </div>
