--- a/src/Pages/Shared/_NavPartial.cshtml
+++ b/src/Pages/Shared/_NavPartial.cshtml
@@ -11,5 +11,8 @@
     <li class="nav-item">
         <a class="nav-link text-dark" asp-page="/Friends/Index">Amis</a>
     </li>
+    <li class="nav-item">
+        <a class="nav-link text-dark" asp-page="/Tags/Index">Tags</a>
+    </li>
 }
 </ul>
