--- a/src/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/src/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    Layout = "/Areas/Identity/Pages/_Layout.cshtml";
+    Layout = "../../../Pages/Shared/_Layout";
 }
 
 <h1>Gestion de votre compte</h1>
