Add password reset page French translation

--- a/src/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
+++ b/src/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
@@ -1,10 +1,10 @@
 ﻿@page
 @model ResetPasswordConfirmationModel
 @{
-    ViewData["Title"] = "Reset password confirmation";
+    ViewData["Title"] = "Mot de passe réinitialisé";
 }
 
 <h1>@ViewData["Title"]</h1>
 <p>
-    Your password has been reset. Please <a asp-page="./Login">click here to log in</a>.
+    Votre mot de passe a bien été réinitialisé. Veuillez <a asp-page="./Login">cliquer ici</a> pour vous connecter.
 </p>
