--- a/src/Pages/Shared/_NavPartial.cshtml
+++ b/src/Pages/Shared/_NavPartial.cshtml
@@ -1,4 +1,4 @@
-@inject SignInManager<RemindMeal.Models.User> SignInManager
+@inject SignInManager<Models.User> SignInManager
 
 <ul class="navbar-nav flex-grow-1">
 @if (SignInManager.IsSignedIn(User)) {
