Improves Edit Friend page  + improve buttons

--- a/src/Pages/Recipes/Edit.cshtml
+++ b/src/Pages/Recipes/Edit.cshtml
@@ -43,8 +43,11 @@
                 </select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Enregistrer" class="btn btn-primary" />
-                <a asp-page="./Index" class="btn btn-primary">Retour à la liste</a>
+                <a asp-page="./Index" class="btn btn-secondary">
+                                    <i class="fa fa-arrow-left"></i>
+                                    Retour à la liste
+                                </a>
+                <input type="submit" value="Enregistrer" class="btn btn-success" />
             </div>
         </form>
     </div>
