--- a/src/Pages/Friends/Edit.cshtml
+++ b/src/Pages/Friends/Edit.cshtml
@@ -2,13 +2,13 @@
 @model RemindMeal.Pages.Friends.EditModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Modifier";
 }
 
-<h1>Edit</h1>
+<h4>Modification d'un ami</h4>
 
-<h4>Friend</h4>
 <hr/>
+
 <div class="row">
     <div class="col-md-4">
         <form method="post">
@@ -25,14 +25,14 @@
                 <span asp-validation-for="Friend.Surname" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary"/>
+                <a asp-page="./Index" class="btn btn-secondary">
+                                    <i class="fa fa-arrow-left"></i>
+                                    Retour à la liste
+                                </a>
+                <input type="submit" value="Enregistrer" class="btn btn-success"/>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-page="./Index">Back to List</a>
 </div>
 
 @section Scripts {
