--- a/src/Pages/Friends/Index.cshtml
+++ b/src/Pages/Friends/Index.cshtml
@@ -7,38 +7,26 @@
 
 <h1>Liste de vos invités</h1>
 
-<p>
-    <a asp-page="Create" class="btn btn-success">Créer un nouvel invité</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Friends[0].Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Friends[0].Surname)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model.Friends) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Surname)
-            </td>
-            <td>
-                <div class="btn-group" role="group">
-                    <a asp-page="./Details" asp-route-id="@item.Id" class="btn btn-primary">Détails</a>
-                    <a asp-page="./Edit"    asp-route-id="@item.Id" class="btn btn-warning">Modifier</a>
-                    <a asp-page="./Delete"  asp-route-id="@item.Id" class="btn btn-danger">Supprimer</a>
+<div class="card-group">
+    @foreach (var item in Model.Friends)
+    {
+        <div class="col-lg-4">
+            <div class="card">
+                <a asp-page="./Details" asp-route-id="@item.Id" class="card-header">
+                    @item.FullName
+                </a>
+                <div class="card-body">
+                    <div class="card-text">
+                        A participé à @item.Meals.Count repas et goûté à @item.RecipesCount recettes
+                    </div>
                 </div>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+                <div class="card-footer">
+                    <div class="btn btn-group">
+                        <a asp-page="./Edit" asp-route-id="@item.Id" class="btn btn-success">Modifier</a>
+                        <a asp-page="./Delete" asp-route-id="@item.Id" class="btn btn-danger">Supprimer</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    }
+</div>
