--- a/src/Pages/Meals/Index.cshtml
+++ b/src/Pages/Meals/Index.cshtml
@@ -1,4 +1,5 @@
 @page
+@using RemindMeal.Structures
 @model RemindMeal.Pages.Meals.IndexModel
 
 @{
@@ -14,7 +15,17 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Meals[0].Date)
+                <a asp-page="./Index" asp-route-dateSortOrder="@Model.DateSortLink">
+                    @Html.DisplayNameFor(model => model.Meals[0].Date)
+                </a>
+                @if (Model.DateSort == SortOrder.Ascending)
+                {
+                    <i class="fa fa-angle-down"></i>    
+                }
+                else
+                {
+                    <i class="fa fa-angle-up"></i>
+                }
             </th>
             <th>Invités</th>
             <th>Menu</th>
