--- a/src/Pages/Friends/Index.cshtml
+++ b/src/Pages/Friends/Index.cshtml
@@ -14,10 +14,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Friends[0].Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Friends[0].Surname)
+                @Html.DisplayNameFor(model => model.Friends[0].FullName)
             </th>
             <th></th>
         </tr>
@@ -26,10 +23,7 @@
 @foreach (var item in Model.Friends) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Surname)
+                @Html.DisplayFor(modelItem => item.FullName)
             </td>
             <td>
                 <div class="btn-group" role="group">
