--- a/src/Pages/Friends/Index.cshtml
+++ b/src/Pages/Friends/Index.cshtml
@@ -28,7 +28,7 @@
             <td>
                 <div class="btn-group" role="group">
                     <a asp-page="./Details" asp-route-id="@item.Id" class="btn btn-primary">Détails</a>
-                    <a asp-page="./Edit"    asp-route-id="@item.Id" class="btn btn-warning">Modifier</a>
+                    <a asp-page="./Edit"    asp-route-id="@item.Id" class="btn btn-success">Modifier</a>
                     <a asp-page="./Delete"  asp-route-id="@item.Id" class="btn btn-danger">Supprimer</a>
                 </div>
             </td>
