Add French translated text on select fields when nothing selected

--- a/src/Pages/Meals/Create.cshtml
+++ b/src/Pages/Meals/Create.cshtml
@@ -23,7 +23,8 @@
                     asp-for="MealView.SelectedFriendIds"
                     asp-items="Model.MealView.AvailableFriends"
                     class="form-control selectpicker"
-                    data-live-search="true">
+                    data-live-search="true"
+                    data-none-selected-text="Aucun invité sélectionné">
                 </select>
             </div>
             <div class="form-group">
@@ -32,7 +33,8 @@
                     asp-for="MealView.SelectedRecipeIds"
                     asp-items="Model.MealView.AvailableRecipes"
                     class="form-control selectpicker"
-                    data-live-search="true">
+                    data-live-search="true"
+                    data-none-selected-text="Aucune recette sélectionnée">
                 </select>
             </div>
             <div class="form-group">
