--- a/src/Pages/Meals/Edit.cshtml
+++ b/src/Pages/Meals/Edit.cshtml
@@ -24,7 +24,8 @@
                     asp-for="MealMV.SelectedFriendIds"
                     asp-items="Model.MealMV.AvailableFriends"
                     class="form-control selectpicker"
-                    data-live-search="true">
+                    data-live-search="true"
+                    data-none-selected-text="Aucun invité sélectionné">
                 </select>
             </div>
             <div class="form-group">
@@ -33,7 +34,8 @@
                     asp-for="MealMV.SelectedRecipeIds"
                     asp-items="Model.MealMV.AvailableRecipes"
                     class="form-control selectpicker"
-                    data-live-search="true">
+                    data-live-search="true"
+                    data-none-selected-text="Aucune recette sélectionnée">
                 </select>
             </div>
             <div class="form-group">
