--- a/src/Pages/Meals/Delete.cshtml
+++ b/src/Pages/Meals/Delete.cshtml
@@ -2,27 +2,14 @@
 @model RemindMeal.Pages.Meals.DeleteModel
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Suppression d'un repas";
 }
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
+<h3>Êtes-vous sûr de vouloir supprimer le repas du @Model.Meal.Date.ToString("dd/MM/yyyy") ?</h3>
 <div>
-    <h4>Meal</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Meal.Date)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Meal.Date)
-        </dd>
-    </dl>
-    
     <form method="post">
-        <input type="hidden" asp-for="Meal.Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
-    </form>
+        <input type="hidden" asp-for="Meal.Id"/>
+        <input type="submit" value="Supprimer" class="btn btn-danger"/> |
+        <a asp-page="./Index">Retour à vos repas</a>
+    </form> 
 </div>
