Add Friends name in Meal list view

--- a/src/Pages/Meals/Index.cshtml
+++ b/src/Pages/Meals/Index.cshtml
@@ -39,7 +39,7 @@
                 @Html.DisplayFor(modelItem => item.Date)
             </td>
             <td>
-                @string.Join(",", item.Presences.Count)
+                @string.Join(",", item.Presences.Select(p => p.Friend.FullName))
             </td>
             <td>
                 @string.Join(",", item.Cookings.Select(c => c.Recipe.Name))
