--- a/src/Pages/Shared/_NavPartial.cshtml
+++ b/src/Pages/Shared/_NavPartial.cshtml
@@ -6,6 +6,9 @@
         <a class="nav-link text-dark" asp-page="/Recipes/Index">Recettes</a>
     </li>
     <li class="nav-item">
+        <a class="nav-link text-dark" asp-page="/Recipes/Category">Catégories</a>
+    </li>
+    <li class="nav-item">
         <a class="nav-link text-dark" asp-page="/Meals/Index">Repas</a>
     </li>
     <li class="nav-item">
