--- a/RemindMeal.App/Pages/Recipes/Create.cshtml
+++ b/RemindMeal.App/Pages/Recipes/Create.cshtml
@@ -23,8 +23,18 @@
             </div>
             <div class="form-group">
                 <label asp-for="RecipeModelView.Type" class="control-label"></label>
-                <select asp-for="RecipeModelView.Type" asp-items="Html.GetEnumSelectList<RecipeType>()"
-                    class="form-control selectpicker"></select>
+                <select
+                    asp-for="RecipeModelView.Type"
+                    asp-items="Model.RecipeModelView.Categories"
+                    class="form-control selectpicker"
+                    data-live-search="true"
+                    data-none-selected-text="Aucune catégorie sélectionnée">
+                </select>
+                @* <select
+                    asp-for="RecipeModelView.Type"
+                    asp-items="Html.GetEnumSelectList<RecipeType>()"
+                    class="form-control selectpicker">
+                </select> *@
                 <span asp-validation-for="RecipeModelView.Type" class="text-danger"></span>
             </div>
 
