--- a/RemindMeal.App/Pages/Recipes/Edit.cshtml
+++ b/RemindMeal.App/Pages/Recipes/Edit.cshtml
@@ -27,9 +27,16 @@
                 <label asp-for="RecipeView.Type" class="control-label"></label>
                 <select
                     asp-for="RecipeView.Type"
+                    asp-items="Model.RecipeView.Categories"
+                    class="form-control selectpicker"
+                    data-live-search="true"
+                    data-none-selected-text="Aucune catégorie sélectionnée">
+                </select>
+                @* <select
+                    asp-for="RecipeView.Type"
                     asp-items="Html.GetEnumSelectList<RecipeType>()"
                     class="form-control selectpicker">
-                </select>
+                </select> *@
                 <span asp-validation-for="RecipeView.Type" class="text-danger"></span>
             </div>
             <div class="form-group">
