--- a/RemindMeal.App/Pages/Recipes/Details.cshtml
+++ b/RemindMeal.App/Pages/Recipes/Details.cshtml
@@ -11,10 +11,10 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Recipe.Type)
+            @Html.DisplayNameFor(model => model.Recipe.Category.Name)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Recipe.Type)
+            @Html.DisplayFor(model => model.Recipe.Category)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Recipe.Description)
