--- a/RemindMeal.App/Pages/Recipes/Index.cshtml
+++ b/RemindMeal.App/Pages/Recipes/Index.cshtml
@@ -41,7 +41,7 @@
                 }
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Recipes[0].Type)
+                @Html.DisplayNameFor(model => model.Recipes[0].Category)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Recipes[0].Description)
@@ -56,7 +56,7 @@
                 @Html.DisplayFor(_ => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(_ => item.Type)
+                @Html.DisplayFor(_ => item.Category.Name)
             </td>
             <td>
                 @Html.DisplayFor(_ => item.Description)
